{
    "name": "CustomControls",
    "maps": [
        {
            "name": "PlayerMap",
            "id": "a50a68d8-207f-43ea-9424-b4a8c8b662a5",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0e2e22f1-1614-4556-8acd-279158b06ae1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RiseHand",
                    "type": "Button",
                    "id": "54bd5da6-ffdc-4a56-9bf8-47c244a0d977",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7f5b1015-59a9-4d42-b5a0-9ddf9f5a8c15",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3775f469-522d-4112-9322-00081ef14ca5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RiseHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e199897-34b5-4797-b5bc-0f4547562376",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RiseHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}